deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails
  template:
    metadata:
      labels:
        app: rails
    spec:
      containers:
        - name: rails
          image: postgres
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: rails-service
spec:
  selector:
    app: rails
  ports:
    - name: tcp
      port: 8080
      targetPort: 3000
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: "postgres"
  replicas: 3
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432
          name: tcp
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rails-ingress
spec:
  rules:
    - host: ""
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rails-service
                port:
                  number: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails
  template:
    metadata:
      labels:
        app: rails
    spec:
      containers:
      - name: rails
        image: posgtres
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ruby-postgres-db
spec:
  selector:
    app: ruby-postgres-db
  ports:
  - name: postgres
    port: 5432
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails
  template:
    metadata:
      labels:
        app: rails
    spec:
      containers:
      - name: postgres-db-container
        image: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-db-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-db-data
        emptyDir: {}
